# aider_example

./: .aider.chat.history.md  Cargo.toml  README.md
sql_file/: user.sql
src/: lib.rs  main.rs  user.rs
src/handlers/: user_handler.rs
src/models/: user.rs
