[package]
name = "rust_starter"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
hyper = "0.14"
sqlx = { version = "0.8.6", features = ["runtime-tokio-native-tls", "postgres"] }
dotenv = "0.15"
